app/assets/stylesheets/components/expenses.scss
.middle-expenses {
  width: 558px;
  height: 800px;
  border-left: 1px solid $gray;
  border-right: 1px solid $gray;
  box-shadow: 0 0 12px rgba(0,0,0,0.2);
}

.left-nav {
  width: 200px;
  height: 800px;
}

.right-panel {
  width: 200px;
  height: 800px;
}

.expenses {
  display: flex;
  justify-content: center;
  font-family: 'Lato', sans-serif;
}

.expenses-header {
  background: #eee;
  border-bottom: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  font-size: 24px;
  font-weight: bold;
  color: #333;
  height: 50px;
  padding-left: 5px;
  display: flex;
  align-items: center;
  padding: 10px 10px 10px;
  font-family: 'Lato', sans-serif;
}

.expense-summary {
  display: flex;
  align-items: center;
  padding: 15px;
  border-bottom: 1px solid #eee;
}

.expense-summary:hover {
  background: #f8f8f8;
}

.expense-summary .date {
  color: #999;
  text-transform: uppercase;
  margin: 0 5px;
}

.expense-summary .day {
  font-size: 20px
}

.expense-summary .month {
  font-size: 10px
}

.expense-summary h3 {
  font-size: 16px;
  font-weight: bold;
  width: 50%;
}

.expense-summary h4 {
  font-weight: bold;
  font-size: 16px;
}

.expense-summary h5 {
  color: #aaa;
  font-size: 12px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: clip;
}

.expense-summary .lent {
  width: 20%;
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}

.expense-summary .paid {
  width: 20%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.expense-summary:hover button {
  color: #c00;
  opacity: 1;
}

.expense-summary button {
  opacity: 0;
}

.expense-detail {
  display: flex;
  flex-direction: column;
  background: #f8f8f8;
  padding: 15px;
  box-shadow: inset 0 5px 7px -5px rgba(0,0,0,0.25), inset 0 -3px 7px -5px rgba(0,0,0,0.25);

}

.expense-detail header {
  display: flex;
  flex-direction: row;
  border-bottom: 1px solid #ccc;
  padding-bottom: 10px;
}

.expense-detail header h2 {
  font-size: 16px;
}

.expense-detail header h3 {
  font-size: 20px;
  font-weight: bold;
}

.expense-detail header h4 {
  font-size: 12px;
  color: #999999;
}

.expense-detail .header-info {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin-left: 10px;
}

.expense-detail i {
  padding: 25px 8px;
  background: #eee;
  font-size: 32px;
  color: black;
  text-align: center;
  text-justify: center;
  border: 1px solid #ccc;
  display: inline-block;
  box-sizing: border-box;
}

.expense-detail .i-border {
  background: white;
  padding: 4px;
  border: 1px solid #ccc;
  display: inline-block;
}

.share-index-item {
  display: flex;
  align-items: center;
  margin: 5px;
}

.expense-detail .share-info {
  margin-top: 10px;
  color: #333333;
  font-size: 13px;
  width: 45%;
}

.expense-detail .body-info {
  display: flex;
}

.notes {
  margin-top: 15px;
}

.notes p {
  font-size: 12px;
  text-transform: uppercase;
  color: #999;
}

.notes .note {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 6px 8px;
  word-wrap: break-word;
  font-size: 11px;
  color: #666;
}

